--- a/portalmahasiswa/templates/index.html
+++ b/portalmahasiswa/templates/index.html
@@ -11,12 +11,41 @@
     <title>Portal</title>
   </head>
   <body>
-    <ul class="list-group">
-        {% for item in semua_mahasiswa %}
-            <li class="list-group-item">{{item.nama_mahasiswa}} ({{item.nomor_siswa}})</li>
-        {% endfor %}
-      </ul>
+    <div class="container">
+      <h3>List Mahasiswa di Sekolah </h3><br><br>
 
+      <div class="row">
+        <div class="col float-left">
+          <a class="btn btn-primary" href="{% url 'mahasiswa_create' %}" role="button">Tambah Mahasiswa Baru</a>
+        </div>
+        <div class="col float-right">
+          <form action="{% url 'portal' %}">
+            <input name="keyword" type="text" placeholder="Search..">
+            <input type="submit" value="Search">
+          </form>
+        </div>
+      </div>
+
+      <br><br>
+  
+      <table class="table">
+        <tbody>
+          {% for item in semua_mahasiswa %}
+          <tr>
+            <td>{{item.nama_mahasiswa}}</td>
+            <td>{{item.nomor_siswa}}</td>
+            <td>
+              <a class="btn btn-primary" href="{% url 'mahasiswa_detail' item.id %}" role="button">Detail</a>
+              <a class="btn btn-warning" href="{% url 'mahasiswa_update' item.id %}" role="button">Edit</a>
+              <a class="btn btn-danger" href="{% url 'mahasiswa_delete' item.id %}" role="button">Delete</a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+  
+    </div>
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
