--- a/portalmahasiswa/templates/create_mahasiswa.html
+++ b/portalmahasiswa/templates/create_mahasiswa.html
@@ -1,11 +1,30 @@
-<h3>Create Mahasiswa Baru </h3>
-<br>
-<br>
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Portal</title>
+  </head>
+  <body>
+    <div class="container">
+        <br><br><br>
+        <h3>Create Mahasiswa Baru </h3>
+        <br>
+        <br>
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            
+            {{form.as_p}}
     
-    {{form.as_p}}
-
-    <button class="btn btn-primary" type="submit">Submit</button>
-
-</form>
+            <button class="btn btn-primary" type="submit">Submit</button>
+    
+        </form>
+    </div>
+    
+    </body>
+</html>
